--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^1.2.0",
+    "react-testing-library": "^4.1.2"
   }
 }
